# PocketRecorder

./: .gitignore  Configuration.cs  ConfigurationMigrator.cs  Plugin.cs  PocketRecorder.csproj  PocketRecorder.json  README.md  ShellHelpers.cs  VideoOutputScaleMode.cs
Capture/: AudioCaptureService.cs  D3D11InteropHelpers.cs  VideoCaptureFormats.cs  VideoCaptureService.NativeShared.cs  VideoCaptureService.Nv12.cs  VideoCaptureService.cs  VideoFrame.cs  VideoFrameContentAnalyzer.cs  VideoPipelinePerfStats.cs  VideoPixelFormat.cs  WindowGraphicsCapture.cs
Diagnostics/: AmdRecordingDiagnosticLog.cs  RecordingDiagnosticLog.cs
Encoding/: BoundedMediaQueue.cs  FFmpegBootstrapper.cs  FFmpegEncoderSelector.cs  FFmpegEncodingOptions.cs  FFmpegWriter.cs  MediaFoundationWriter.cs  NativeRecorderAbi.cs  NativeRecorderBackend.cs  NativeRecorderDllResolver.cs  NativeRecorderRuntime.cs  NativeRecorderSession.cs  NativeRecorderTimingDiagnostics.cs  (+2 more)
lib/native/VideoCodecSDK/Video_Codec_SDK_13.1.15/Samples/: CMakeLists.txt  aarch64-cc-toolchain.cmake
lib/native/VideoCodecSDK/Video_Codec_SDK_13.1.15/Samples/AppDecode/AppDec/: AppDec.cpp  CMakeLists.txt
lib/native/VideoCodecSDK/Video_Codec_SDK_13.1.15/Samples/AppDecode/AppDecD3D/: AppDecD3D.cpp  CMakeLists.txt  FramePresenterD3D.h  FramePresenterD3D11.h  FramePresenterD3D9.h
lib/native/VideoCodecSDK/Video_Codec_SDK_13.1.15/Samples/AppDecode/AppDecGL/: AppDecGL.cpp  CMakeLists.txt  FramePresenter.h  FramePresenterGLUT.h  FramePresenterUnix.cpp  FramePresenterUnix.h
lib/native/VideoCodecSDK/Video_Codec_SDK_13.1.15/Samples/AppDecode/AppDecImageProvider/: AppDecImageProvider.cpp  CMakeLists.txt
lib/native/VideoCodecSDK/Video_Codec_SDK_13.1.15/Samples/AppDecode/AppDecLowLatency/: AppDecLowLatency.cpp  CMakeLists.txt
lib/native/VideoCodecSDK/Video_Codec_SDK_13.1.15/Samples/AppDecode/AppDecMem/: AppDecMem.cpp  CMakeLists.txt
lib/native/VideoCodecSDK/Video_Codec_SDK_13.1.15/Samples/AppDecode/AppDecMultiFiles/: AppDecMultiFiles.cpp  CMakeLists.txt
lib/native/VideoCodecSDK/Video_Codec_SDK_13.1.15/Samples/AppDecode/AppDecMultiInput/: AppDecMultiInput.cpp  CMakeLists.txt  Image.cu
lib/native/VideoCodecSDK/Video_Codec_SDK_13.1.15/Samples/AppDecode/AppDecPerf/: AppDecPerf.cpp  CMakeLists.txt
lib/native/VideoCodecSDK/Video_Codec_SDK_13.1.15/Samples/AppDecode/AppDecVideoDecoder/: AppDecVideoDecoder.cpp  CMakeLists.txt
lib/native/VideoCodecSDK/Video_Codec_SDK_13.1.15/Samples/AppDecode/Common/: AppDecUtils.h
lib/native/VideoCodecSDK/Video_Codec_SDK_13.1.15/Samples/AppEncode/AppEncCuda/: AppEncCuda.cpp  CMakeLists.txt
lib/native/VideoCodecSDK/Video_Codec_SDK_13.1.15/Samples/AppEncode/AppEncD3D11/: AppEncD3D11.cpp  CMakeLists.txt
lib/native/VideoCodecSDK/Video_Codec_SDK_13.1.15/Samples/AppEncode/AppEncD3D12/: AppEncD3D12.cpp  CMakeLists.txt
lib/native/VideoCodecSDK/Video_Codec_SDK_13.1.15/Samples/AppEncode/AppEncD3D9/: AppEncD3D9.cpp  CMakeLists.txt
lib/native/VideoCodecSDK/Video_Codec_SDK_13.1.15/Samples/AppEncode/AppEncDec/: AppEncDec.cpp  CMakeLists.txt
lib/native/VideoCodecSDK/Video_Codec_SDK_13.1.15/Samples/AppEncode/AppEncExternalMEHint/: AppEncExternalMEHint.cpp  CMakeLists.txt  README.txt
lib/native/VideoCodecSDK/Video_Codec_SDK_13.1.15/Samples/AppEncode/AppEncExternalMEHint/Tests/IBPTest/: HEVCExternalMEHintConfigFileIBP.txt
lib/native/VideoCodecSDK/Video_Codec_SDK_13.1.15/Samples/AppEncode/AppEncExternalMEHint/Tests/IPPTest/: AV1ExternalMEHintConfigFileIPP.txt
lib/native/VideoCodecSDK/Video_Codec_SDK_13.1.15/Samples/AppEncode/AppEncGL/: AppEncGL.cpp  CMakeLists.txt  GraphicsUtils.cpp  GraphicsUtils.h
lib/native/VideoCodecSDK/Video_Codec_SDK_13.1.15/Samples/AppEncode/AppEncLowLatency/: AppEncLowLatency.cpp  CMakeLists.txt
lib/native/VideoCodecSDK/Video_Codec_SDK_13.1.15/Samples/AppEncode/AppEncME/: AppEncME.cpp  CMakeLists.txt
lib/native/VideoCodecSDK/Video_Codec_SDK_13.1.15/Samples/AppEncode/AppEncMultiInstance/: AppEncMultiInstance.cpp  CMakeLists.txt
lib/native/VideoCodecSDK/Video_Codec_SDK_13.1.15/Samples/AppEncode/AppEncPerf/: AppEncPerf.cpp  CMakeLists.txt
lib/native/VideoCodecSDK/Video_Codec_SDK_13.1.15/Samples/AppEncode/AppEncQual/: AppEncQual.cpp  CMakeLists.txt  PSNR.h
lib/native/VideoCodecSDK/Video_Codec_SDK_13.1.15/Samples/AppEncode/AppMotionEstimationVkCuda/: AppMotionEstimationVkCuda.cpp  CMakeLists.txt  NvEnc.cpp  NvEnc.h  utility.cpp  utility.h
lib/native/VideoCodecSDK/Video_Codec_SDK_13.1.15/Samples/AppEncode/Common/: AppEncUtils.h  AppEncUtilsD3D11.h
lib/native/VideoCodecSDK/Video_Codec_SDK_13.1.15/Samples/AppTranscode/AppTrans/: AppTrans.cpp  AppTrans.h  CMakeLists.txt
lib/native/VideoCodecSDK/Video_Codec_SDK_13.1.15/Samples/AppTranscode/AppTransOneToN/: AppTransOneToN.cpp  AppTransOneToN.h  CMakeLists.txt
lib/native/VideoCodecSDK/Video_Codec_SDK_13.1.15/Samples/AppTranscode/AppTransPerf/: AppTransPerf.cpp  AppTransPerf.h  CMakeLists.txt
lib/native/VideoCodecSDK/Video_Codec_SDK_13.1.15/Samples/AppTranscode/AppTransZeroCopy/: AppTransZeroCopy.cpp  AppTransZeroCopy.h  CMakeLists.txt
lib/native/VideoCodecSDK/Video_Codec_SDK_13.1.15/Samples/NvCodec/NvDecoder/: NvDecoder.cpp  NvDecoder.h  NvDecoderZeroCopy.cpp  NvDecoderZeroCopy.h
lib/native/VideoCodecSDK/Video_Codec_SDK_13.1.15/Samples/NvCodec/NvEncoder/: NvEncoder.cpp  NvEncoder.h  NvEncoderCuda.cpp  NvEncoderCuda.h  NvEncoderCudaIterative.cpp  NvEncoderCudaIterative.h  NvEncoderD3D11.cpp  NvEncoderD3D11.h  NvEncoderD3D12.cpp  NvEncoderD3D12.h  NvEncoderD3D9.cpp  NvEncoderD3D9.h  NvEncoderGL.cpp  NvEncoderGL.h  NvEncoderOutputInVidMemCuda.cpp  NvEncoderOutputInVidMemCuda.h  NvEncoderOutputInVidMemD3D11.cpp  NvEncoderOutputInVidMemD3D11.h  NvEncoderZeroCopy.cpp  NvEncoderZeroCopy.h
lib/native/VideoCodecSDK/Video_Codec_SDK_13.1.15/Samples/Utils/: BitDepth.cu  ColorSpace.cu  ColorSpace.h  DecoderCache.h  FFmpegDemuxer.h  FFmpegMuxer.h  FFmpegStreamer.h  Logger.h  Metrics.cu  Metrics.h  NvCodecUtils.h  NvEncoderCLIOptions.h  NvVideoDecoder.cpp  NvVideoDecoder.h  Resize.cu  SeekUtils.cpp  SeekUtils.h  ZeroCopyUtils.h  crc.cu
(+60 files in other folders)
